# bp-consolidation-web

./: .gitignore  README-ct-graph.md  README-sequences.md  README.md  pyproject.toml  requirements.txt
docs/: test-diagram1.md
src/app/: access_switches.py  ck_global.py  generic_systems.py  graphql_main.py  main.py  test.py  virtual_networks.py  vlan_cts.py
src/app/component/: access-switches.js  apstra-server.js  command.js  common.js  generic-systems.js  virtual-networks.js
src/app/lib/: utils.py
src/app/model/: ck_blueprint.py  ck_generic_system.py  ck_global.py  ck_server.py
src/app/pages/: home.md
src/app/static/: env-example.ini  env-example.json  env-example.yml  index.html
src/app/static/css/: style.css
src/app/static/js/: main.js
src/component/: access-switches.js  apstra-server.js  command.js  common.js  footer-component.js  generic-systems.js  main-context.js  side-bar.js  top-nav.js
src/static/: index.html
src/static/css/: style.css
src/templates/: base.html  page.html  test.html
src/templates/include/: footer.html  header.html  sidebar.html  topnav.html
tests/fixtures/: fixture-switch-system-links-5120.json
